# sru-lint

./: .gitignore  .pre-commit-config.yaml  HACKING.md  LICENSE  README.md  pylintrc  pyproject.toml  test-requirements.txt  tox.ini
.github/workflows/: build-python.yaml  build-snap.yml  check-sru-debdiff.yml  pypi-publish.yaml  python-unittests.yml  run-functional-tests.yml  tests.yml
docs/: .custom_wordlist.txt  conf.py  index.rst  requirements.txt
docs/.sphinx/: get_vale_conf.py  update_sp.py
docs/.sphinx/metrics/: build_metrics.py
docs/contrib-docs/: contributing.rst  index.rst  releasing.rst  testing.rst
docs/user-docs/: index.rst  install.rst  usage.rst
snap/: snapcraft.yaml
sru_lint/: __init__.py  cli.py  dep3_checker.py  feedback.py  patches.py  plugin_base.py  plugin_manager.py  shared.py
sru_lint/common/: doc_links.py  errors.py  feedback.py  launchpad_helper.py  logging.py  parse.py  patch_processor.py  patches.py
sru_lint/common/debian/: changelog.py  dep3.py
sru_lint/common/ui/: snippet.py
sru_lint/plugins/: changelog_entry.py  patch_format.py  plugin_base.py  publication_history.py  publishing_history.py  sru_template.py  uca.py  update_maintainer.py  upload_queue.py  version_number.py
sru_lint/plugins/nested/: dummy_plugin.py
tests/: test_changelog_entry.py  test_cli.py  test_patch_format.py  test_plugin_manager.py  test_publication_history.py  test_publishing_history.py  test_sru_template.py  test_uca.py  test_update_maintainer.py  test_upload_queue.py
tests/functional_tests/: debdiff_generator.py  launchpad_helper.py  sru_lint_test.py
tests/functional_tests/generated_debdiffs/: .gitignore
