[tool.poetry]
name = "sru-lint"
version = "0.1.0"
description = ""
authors = ["Dariusz Gadomski <dgadomski@ubuntu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.19.1"
unidiff = "^0.7.5"
python-debian = "^1.0.1"
launchpadlib = "^2.1.0"
coverage = "^7.10.7"
parse = "^1.20.2"

[tool.poetry.scripts]
sru-lint = "sru_lint.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
