[tool.poetry]
name = "sru-lint"
version = "0.1.0"
description = ""
authors = ["Dariusz Gadomski <dgadomski@ubuntu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.19.1"
unidiff = "^0.7.5"
python-debian = "^1.0.1"
launchpadlib = "^2.1.0"
coverage = "^7.10.7"
parse = "^1.20.2"
rich = "^14.2.0"
ruff = "^0.14.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
sru-lint = "sru_lint.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["__pycache__", "*.pyc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["sru_lint"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
